@@ -1,3 +1,6 @@
+* Fri Jun 28 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 2.5.0-0
+- Add v2 compliance_markup data
+
 * Fri Jun 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.1-0
 - Ensure that the selinux::login_resources Hash performs a deep merge by
   default.
